# quasar

./: README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
cli/src/: build.rs  client.rs  config.rs  idl.rs  init.rs  keys.rs  lib.rs
core/: Cargo.toml
core/src/: context.rs  dynamic.rs  entrypoint.rs  error.rs  event.rs  lib.rs  macros.rs  pda.rs  prelude.rs  remaining.rs  traits.rs
core/src/accounts/: account.rs  clock.rs  initialize.rs  (+5 more)
core/tests/: account_validation.rs  cpi.rs  expansion.rs  miri.rs
derive/: Cargo.toml
derive/src/: account.rs  declare_program.rs  error_code.rs  event.rs  helpers.rs  instruction.rs  lib.rs  pda_precompute.rs  program.rs
derive/src/account/: accessors.rs  dynamic.rs  fixed.rs  mod.rs  seeds.rs
derive/src/accounts/: attrs.rs  client.rs  composition.rs  constraint.rs  evidence.rs  field_kind.rs  fields.rs  fields_process.rs  fields_support.rs  init.rs  instruction_args.rs  mod.rs
docs/: safety.md
examples/escrow/: Cargo.toml
examples/multisig/: Cargo.toml
idl/src/: codegen_ts.rs  lib.rs  main.rs  types.rs
idl/tests/: lint.rs  parser.rs
lang/src/: client.rs  entrypoint.rs  instruction_arg.rs  lib.rs  pda.rs  prelude.rs  remaining.rs  traits.rs  validation.rs
pod/src/: lib.rs  string.rs  vec.rs
pod/tests/: types.rs
profile/src/: aggregate.rs  dwarf.rs  elf.rs  lib.rs  output.rs
quasar/src/: lib.rs
scripts/: setup-branch-protection.sh
spl/: Cargo.toml
spl/src/: associated_token.rs  close.rs  constants.rs  init.rs  interface.rs  lib.rs  state.rs  token.rs  token_2022.rs
spl/tests/: miri.rs
(+266 files in other folders)
