[package]
name = "quasar-derive"
description = "Proc macros for the Quasar Solana framework — #[account], #[derive(Accounts)], #[program], #[event], #[error_code]"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
const-crypto = "0.3.0"
bs58 = "0.5"
